# rtrace-agent-reliability

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  PRE_EXECUTION_VERIFICATION_v0.6.11.md  README.md  RELEASE_CONTENTS.md  RELEASE_FILE_INDEX.txt  VERIFICATION_REPORT_V0.6.11.md  delivery_source_manifest.json  pyproject.toml
.github/workflows/: ci.yml
configs/: ci_smoke.yaml  default.yaml
docs/: README.md  monitoring_spec.md  operations.md  preflight_hardening_v0.6.11.md  validation_contract.md
evidence/: README.md
evidence/v0.6.11/gpu_full_20260707_113317/: evidence_inventory.csv  execution_manifest.json  raw_adapter_inference.json  requirements.freeze.txt  sha256_manifest.csv  source_bundle_sha256.txt  training_step_preflight.json  training_summary.json
evidence/v0.6.11/gpu_full_20260707_113317/logs/: bitsandbytes_diagnostic.txt  bitsandbytes_probe.json  nvidia_smi.txt  torch_probe_after_install.json
evidence/v0.6.11/gpu_full_20260707_113317/multiseed/: c5_vs_c3_seed_level_summary.csv  multiseed_candidate_metrics.csv  multiseed_progress.json  multiseed_release_summary.json  multiseed_summary.csv  operating_point_selected_by_seed.csv
evidence/v0.6.11/gpu_full_20260707_113317/run/: calibration_regularization_selection.csv  calibration_table.csv  candidate_comparison.csv  (+14 more)
scripts/: probe_bitsandbytes.py  probe_torch_cuda.py  raw_adapter_inference.py  run_gpu_local.ps1  run_local.ps1  train_qlora.py  verify_output.py
src/rtrace/: actors.py  cli.py  config.py  data.py  evaluation.py  features.py  incidents.py  mcp_server.py  metrics.py  models.py  parser.py  pipeline.py  policy.py  reporting.py  router.py  sasc.py  schemas.py  state.py  utils.py
tests/: test_bitsandbytes_probe.py  test_ci_workflow_contract.py  test_cli_and_runtime_contract.py  test_config.py  test_data.py  test_error_contracts.py  test_execution_guard.py  test_gpu_qlora_contract.py  test_incidents.py  test_mcp_manifest.py  test_mcp_runtime_optional.py  test_mcp_tokens.py  test_models.py  test_oracle_boundary.py  test_output_safety.py  test_output_verification.py  test_package_metadata.py  test_packaged_config.py  test_parser_boundary.py  test_pipeline.py  test_policy.py  test_powershell_contract.py  test_powershell_interpolation_safety.py  test_sasc.py  test_source_fingerprint.py  test_state.py  test_torch_probe.py
(+97 files in other folders)
