[build-system]
requires = ["setuptools>=68,<82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtrace-agentic-evaluation"
version = "0.6.11"
description = "Local-first stateful MCP agent evaluation and release reliability framework"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Jinwoo Bae"}]
keywords = ["agent-evaluation", "mcp", "reliability", "calibration", "tool-use"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "tabulate>=0.9",
  "lightgbm>=4.0",
]

[project.optional-dependencies]
mcp = ["fastmcp>=2.0,<3"]
# Install the CUDA-enabled PyTorch wheel separately first on Windows. The runner does this
# before installing this extra, preventing pip from replacing it with a CPU-only wheel.
qlora = [
  "torch>=2.7,<2.12",
  "transformers>=4.51,<5",
  "peft>=0.18,<0.20",
  "bitsandbytes>=0.49.2,<0.50",
  "datasets>=3,<4",
  "accelerate>=1,<2",
  "safetensors>=0.4",
  "sentencepiece>=0.2",
]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.8", "mypy>=1.11", "build>=1.2"]

[project.urls]
Repository = "https://github.com/ReviveCoding/rtrace-agent-reliability"

[project.scripts]
rtrace = "rtrace.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rtrace = ["py.typed", "default.yaml"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["artifacts", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
files = ["src/rtrace"]
ignore_missing_imports = true
follow_imports = "silent"
check_untyped_defs = true
warn_unused_configs = true
warn_redundant_casts = true
no_implicit_optional = true

[tool.coverage.run]
source = ["rtrace"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 65
